# SD_backend

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
backup/src/: lib.rs  main.rs
backup/src/server/: mod.rs
backup/src/server/logger/: log.rs  mod.rs
db_manager/: .env.example  Cargo.toml  generate_entity.sh
db_manager/entity/: communityservice.rs  dinnerprovider.rs  feedback.rs  health_guide_type.rs  medicalservice.rs  mod.rs  policy_type.rs  prelude.rs  resourceservice.rs
db_manager/migrations/: 001_user.sql  002_notice.sql  003_slideshow.sql  004_policy_type.sql  005_policy_file.sql
db_manager/src/: config.rs  lib.rs  main.rs
db_manager/src/entity/: ai_chat.rs  community_service.rs  detail_meal.rs  dinner_provider.rs  feedback.rs  health_guide_content.rs  health_guide_type.rs  medical_service.rs  mod.rs  mutil_media.rs  notice.rs  policy_file.rs  policy_type.rs  prelude.rs  resource_service.rs  service_map_content.rs  service_map_type.rs  slideshow.rs  user.rs
db_manager/src/migrator/: ai_chat.rs  community_service.rs  detail_meal.rs  dinner_provider.rs  feedback.rs  health_guide_content.rs  health_guide_type.rs  medical_service.rs  mod.rs  mutil_media.rs  notice.rs  policy_file.rs  policy_type.rs  resource_service.rs  service_map_content.rs  service_map_type.rs  slideshow.rs  user.rs  x.rs  y.rs
db_manager/tests/: migration_refresh.rs
debug_utils/: generate_entity.sh  mock_wx.py  reqable_template.py
interface_types/: Cargo.toml  build.rs
interface_types/src/proto/: admin_manager.proto  ai_chat.proto  apply_permission.proto  community_service.proto  detail_meal.proto  dinner.proto  dinner_provider.proto  feedback.proto  health_guide_content.proto  health_guide_type.proto  medical_service.proto  mod.rs  mutil_media.proto  notice.proto  policy.proto  policy_file.proto  policy_type.proto  resource_service.proto  service_map_content.proto  service_map_type.proto  slideshow.proto  user.proto
server_main/: .env.example  Cargo.toml
server_main/src/: lib.rs  main.rs
server_main/src/router/: mod.rs
server_main/src/router/ai_chat/: ai_chat.rs  mod.rs
server_main/src/router/community_service/: delete.rs  get.rs  insert.rs  mod.rs  modify.rs
server_main/src/router/detail_meal/: delete.rs  get.rs  insert.rs  mod.rs  modify.rs
server_main/src/router/dinner_provider/: delete.rs  get.rs  insert.rs  mod.rs  modify.rs
server_main/src/router/feedback/: export.rs  insert.rs  mod.rs
server_main/src/router/health_guide_content/: delete.rs  get.rs  mod.rs  modify.rs  post.rs
server_main/src/router/health_guide_type/: delete.rs  get.rs  mod.rs  modify.rs  post.rs
server_main/src/router/medical_service/: delete.rs  get.rs  insert.rs  mod.rs  modify.rs
server_main/src/router/mutil_media/: get.rs  mod.rs  post.rs  utils.rs
server_main/src/router/notice/: insert.rs  mod.rs
server_main/src/router/policy_file/: delete.rs  get.rs  mod.rs  modify.rs  post.rs
server_main/src/router/policy_type/: delete.rs  get.rs  mod.rs  modify.rs  post.rs
server_main/src/router/resource_service/: delete.rs  get.rs  insert.rs  mod.rs  modify.rs
server_main/src/router/service_map_content/: delete.rs  get.rs  mod.rs  modify.rs  post.rs
server_main/src/router/service_map_type/: delete.rs  get.rs  mod.rs  modify.rs  post.rs
server_main/src/router/slide_show/: delete.rs  get.rs  insert.rs  mod.rs
server_main/src/router/user/: admin_manager.rs  apply_permission.rs  info.rs  login.rs  mod.rs  modify.rs  register.rs
src/: lib.rs  main.rs
src/proto/: auth.proto  form.proto  mod.rs
user_auth/: .env.example  Cargo.toml
user_auth/src/: lib.rs
user_auth/src/db_exchange/: mod.rs  token2user.rs  user2token.rs
user_auth/src/user_auth/: authorize.rs  mod.rs  struct.rs
user_auth/src/wx_auth/: mod.rs  session2json.rs  struct.rs
user_auth/tests/: test_token2user.rs  test_user2token.rs  test_user_premission.rs  test_wx_auth.rs
