[package]
name = "server_main"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.49.0", features = ["full"] }
axum = { version = "0.8.8", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.12.5", features = ["async-read-body", "cached", "cookie", "cookie-private", "error-response", "file-stream", "form", "handler", "middleware", "multipart", "optional-path", "protobuf", "query", "routing", "scheme", "typed-header", "typed-routing", "with-rejection"] }
db_manager = { path = "../db_manager" }
interface_types = { path = "../interface_types" }
serde = { version = "1.0", features = ["derive"] }
user_auth = { path = "../user_auth" }
tracing-subscriber = "0.3.22"
tracing = { version = "0.1.44", features = ["async-await", "log"] }
log = "0.4.29"

[dependencies.sea-orm]
version = "1.1.19"
features=[
    "default",
    "runtime-tokio-native-tls",
    "debug-print",
    "mock",
    "sqlx-all"
]
