[package]
name = "user_auth"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
reqwest = { version = "0.13.1", features = ["native-tls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.49.0", features = ["full"] }
