[package]
name = "user_auth"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.49.0", features = ["full"] }
